deployments/base/metrics-server/networkpolicies/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metrics-server
  namespace: metrics-server
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: metrics-server
  ingress:
  # Webhook
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "10250"
        protocol: TCP
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
    - host
    - remote-node
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
